# hpc-eval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: config.yaml
hpc-eval/: main.py
hpc-eval/commands/: __init__.py  add_user.py  base.py  default.py  submit.py
hpc-eval/components/: assignments.py  log_init.py  solutions.py  users.py  workspace.py
hpc-eval/config/: descriptors.py  loader.py
hpc-eval/helpers/: file_lock.py  serializable.py
hpc-eval/slurm/: api.py  args.py  job.py  slurm.py
hpc-eval/tests/: command_tests.py  test_config.py  test_file_lock.py  test_serializable.py  test_slurm.py  test_solutions.py  test_submit.py  test_users.py
src/hpc-eval/: __main__.py  main.py
src/hpc-eval/commands/: __init__.py  submit.py
src/hpc-eval/config/: descriptors.py
src/hpc-eval/helpers/: serializable.py
src/hpc-eval/slurm/: api.py  args.py  job.py  slurm.py  slurm_api.py  slurm_args.py  slurm_job.py
tests/: test_config.py
